--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "gatsby": "^3.9.1",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-emotion": "^6.9.0",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-image": "^1.10.1",
+    "gatsby-plugin-manifest": "^3.12.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-source-graphql": "^3.11.0",
@@ -33,6 +36,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "react-responsive": "^9.0.0-beta.3",
     "react-syntax-highlighter": "^15.4.4"
   },
   "devDependencies": {
