--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile.development
     working_dir: /portfolio
     env_file:
-      - .env.development
+      - .env
     volumes:
       - ./portfolio:/portfolio
       - node_modules_gatsby:/portfolio/node_modules
