[update]100vh for mobile

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "modern-css-reset": "^1.4.0",
     "react": "^17.0.1",
+    "react-div-100vh": "^0.6.0",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-responsive": "^9.0.0-beta.3",
