--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,6 +24,7 @@
     "gatsby": "^3.9.1",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-emotion": "^6.9.0",
+    "gatsby-plugin-google-analytics": "^3.12.0",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.12.0",
