--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,22 @@ services:
     tty: true
     command: yarn develop
 
+  storybook:
+    build:
+      context: .
+      dockerfile: Dockerfile.development
+    working_dir: /portfolio
+    env_file:
+      - .env
+    volumes:
+      - ./portfolio:/portfolio
+      - node_modules_gatsby:/portfolio/node_modules
+      - cache:/portfolio/.cache
+    network_mode: host
+    stdin_open: true
+    tty: true
+    command: yarn storybook
+
 volumes:
   node_modules_gatsby:
   cache:
