--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -64,6 +64,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2",
+    "storybook-addon-gatsby": "^0.0.2",
     "typescript": "^4.3.5"
   }
 }
