--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "dotenv": "^16.0.0",
     "gatsby": "^3.9.1",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-emotion": "^6.9.0",
